--- a/gridsome/package.json
+++ b/gridsome/package.json
@@ -7,6 +7,7 @@
     "build": "gridsome build"
   },
   "dependencies": {
+    "@nogn/gridsome-source-craft": "0.0.1",
     "gridsome": "^0.7.0"
   }
 }
