--- a/gridsome/package.json
+++ b/gridsome/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@nogn/gridsome-source-craft": "0.0.1",
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "vuex": "^3.6.2"
   }
 }
